fix: refactors contact details layout for improved readability

--- a/src/app/main-pages/contacts/contact-details/contact-details.component.scss
+++ b/src/app/main-pages/contacts/contact-details/contact-details.component.scss
@@ -24,7 +24,10 @@
 
 .contact-name {
   flex-shrink: 0;
-
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 15px;
 
   h2 {
     font-weight: 500;
@@ -34,6 +37,11 @@
     vertical-align: middle;
     margin: 0;
     color: $black;
+  }
+
+  .contact-info-section {
+    display: flex;
+    flex-direction: column;
   }
 }
 
@@ -54,6 +62,9 @@
 
 .contact-actions {
   @include dFlex($ai: center, $g: 20px);
+  display: flex;
+  justify-content: flex-start;
+  gap: 4px;
 }
 
 .action-btn {
@@ -64,14 +75,36 @@
   border-radius: 50%;
   @include dFlex($jc: center, $ai: center);
   transition: background-color 0.3s;
+  display: flex;
+  align-items: center;
+  gap: 4px;
+
+  &.edit-btn {
+    width: 62px;
+    height: 24px;
+  }
+
+  &.delete-btn {
+    width: 81px;
+    height: 24px;
+  }
 
   &:hover {
     background: rgba(0, 0, 0, 0.1);
   }
 
   img {
-    width: 70px;
-    height: 70px;
+    width: 24px;
+    height: 24px;
+  }
+
+  span {
+    font-family: Inter;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 120%;
+    letter-spacing: 0%;
+    vertical-align: middle;
   }
 }
 
